# ocaml-kafka

./: .ocamlformat  dune-project  kafka.opam  kafka_async.opam  kafka_lwt.opam
demo/: demo.ml  dune  main.ml
lib_async/: kafka_async.ml
lib_ctypes/: client.ml  client.mli  config.ml  config.mli  dune  function_description.ml  helpers.ml  rdkafka_bind.ml  rdkafka_config.ml  rdkafka_config.mli  rdkafka_ctypes.ml  type_description.ml  type_enum.ml
lib_ctypes/codegen/: dune  gen_enums.ml  gen_error_codes.ml  main.ml  rdkafka.h.json
test_async/integration/: integration.ml
