(executable
 (name main)
 (promote (until-clean))
 (modules main)
 (libraries gen_enums))

(library
 (name gen_enums)
 (modules gen_enums)
 (inline_tests)
 (preprocess
  (pps
   ppx_compare
   ppx_expect
   ppx_yojson_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord))
 (libraries yojson ppx_yojson_conv_lib))



(library
 (name gen_error_codes)
 (modules gen_error_codes)
 (inline_tests)
 (preprocess
  (pps
   ppx_compare
   ppx_expect
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord))
 (libraries re))
